# pandas-units-extension

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: app.yaml
doc/: peaks.csv  units.ipynb
pandas_units_extension/: __init__.py  new_comparison_op.py  units.py  version.py
pandas_units_extension/pandas_patch/: pandas_patch.pyx  setup.py
src/pandas_units_extension/: __init__.py  _grammar.py  angle.py  base.py  quantity.py  registry.py  units.py
tests/: test_angle.py  test_framework.py  test_pandas_units_extension.py
