[project]
name = "pandas-units-extension"
version = "0.1.0"
description = "Extension pandas dtype and array for physical units and quantities from astropy."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jan Pipek", email = "jan.pipek@gmail.com" },
    { name = "Julian Harbeck", email = "julian-harbeck@outlook.de" }
]
requires-python = ">=3.11"
dependencies = ["pandas>=3.0", "astropy>=5.1.1"]

[project.urls]
Homepage = "https://github.com/janpipek/pandas-units-extension"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
[[tool.mypy.overrides]]
module = ["astropy", "astropy.*"]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pandas-stubs>=3.0.0.260204",
    "pytest>=9.0.2",
]
